fix post creation mobile layout

--- a/src/posts/styling/submitPost.scss
+++ b/src/posts/styling/submitPost.scss
@@ -1,14 +1,28 @@
+@media (min-width: 601px) {
+  :root {
+    --column-display: flex;
+    --grid: 1fr / 2fr 1fr;
+  }
+}
+@media (max-width: 600px) {
+  :root {
+    --column-display: none;
+    --grid: 1fr / 1fr;
+  }
+}
+
 #community-submit {
   display: flex;
   justify-content: center;
   background-color: var(--bg);
   min-height: 94dvh;
-  padding: 1rem;
+  padding: 1dvw;
+  padding-top: 1rem;
 
   .panel-wrap {
     width: clamp(50%, 900px, 95%);
     display: grid;
-    grid: 1fr / 2fr 1fr;
+    grid: var(--grid);
     gap: 1.5rem;
 
     > div {
@@ -85,7 +99,7 @@
   }
 
   .side-panel-wrap {
-    display: flex;
+    display: var(--column-display);
     flex-direction: column;
     gap: 1.5rem;
 
